# fastapi-tutorial

./: README.md  pyproject.toml  test.json
fastapi_tutorial/: client.py  custom_log.py  exception.py  fastapi-practice.db  main.py  schemas.py
fastapi_tutorial/auth/: authentication.py  oauth2.py
fastapi_tutorial/db/: database.py  db_article.py  db_user.py  hash.py  models.py
fastapi_tutorial/router/: article.py  blog_get.py  blog_post.py  dependencies.py  file.py  product.py  user.py
fastapi_tutorial/templates/: product.html  templates.py
tests/: test_main.py
