[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Ken <unknown@hitpointcloud.com>"]
readme = "README.md"
packages = [{ include = "fastapi_tutorial" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.97.0"}
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.13"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
aiofiles = "^23.1.0"
requests = "^2.31.0"
pytest = "^7.3.2"
jinja2 = "^3.1.2"
websockets = "^11.0.3"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
